src/snapshots/commitguard__parser__tests__body and footer missing with newline at the end (stdio input adds a newline).snap
---
source: src/parser.rs
expression: result
---
header:
  input: "feat(nice): add cool feature"
  start: 0
  end: 28
body: ~
footer: ~
commit_type:
  input: feat
  start: 0
  end: 4
scope:
  input: nice
  start: 5
  end: 9
subject:
  input: add cool feature
  start: 12
  end: 28
raw: "feat(nice): add cool feature\n"

