src/snapshots/commitguard__parser__tests__breaking change after type.snap
---
source: src/parser.rs
expression: result
---
header:
  input: "feat!: add cool feature"
  start: 0
  end: 23
body:
  input: some body
  start: 25
  end: 34
footer: ~
commit_type:
  input: feat
  start: 0
  end: 4
scope: ~
subject:
  input: add cool feature
  start: 7
  end: 23
raw: "feat!: add cool feature\n\nsome body"

