src/snapshots/commitguard__parser__tests__complex.snap
---
source: src/parser.rs
expression: result
---
header:
  input: "feat(nice): add cool feature"
  start: 0
  end: 28
body:
  input: some body
  start: 30
  end: 39
footer:
  input: some footer
  start: 41
  end: 52
commit_type:
  input: feat
  start: 0
  end: 4
scope:
  input: nice
  start: 5
  end: 9
subject:
  input: add cool feature
  start: 12
  end: 28
raw: "feat(nice): add cool feature\n\nsome body\n\nsome footer"

