src/snapshots/commitguard__parser__tests__scope missing.snap
---
source: src/parser.rs
expression: result
---
header:
  input: "feat: add cool feature"
  start: 0
  end: 22
body:
  input: "\n\nsome body"
  start: 22
  end: 33
footer:
  input: "\n\nsome footer"
  start: 33
  end: 46
commit_type:
  input: feat
  start: 0
  end: 4
scope: ~
subject:
  input: add cool feature
  start: 6
  end: 22
raw: "feat: add cool feature\n\nsome body\n\nsome footer"

